# simple_media_server

./: .gitignore  DEBUGGING_GUIDE.md  MULTI_FORMAT_GUIDE.md  README.md  README_WINDOWS.md  build.bat  build.sh  config.example.json  config.example.windows.json  dev.bat  run.bat
backend/: CMakeLists.txt  build.sh  main.cpp  scanner.cpp  scanner.h  video_info.cpp  video_info.h
frontend/: Cargo.toml  Trunk.toml  build.sh  index.html  style.css
frontend-svelte/: README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
frontend-svelte/src/: App.svelte  main.ts
frontend-svelte/src/assets/styles/: global.scss
frontend-svelte/src/lib/api/: videoInfo.ts
frontend-svelte/src/lib/components/: Button.svelte  Episode.svelte  Header.svelte  Movie.svelte  ProfileSelector.svelte  Season.svelte  Series.svelte  VideoPlayer.svelte
frontend-svelte/src/lib/stores/: libraryStore.ts  profileStore.ts  videoPlayerStore.ts
frontend-svelte/src/lib/types/: index.ts
frontend-svelte/src/lib/utils/: clipboard.ts  formatPreferences.ts  videoPlayer.ts
frontend/src/: main.rs
