[package]
name = "media-frontend"
version = "0.1.0"
edition = "2021"

[dependencies]
yew = { version = "0.21", features = ["csr"] }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
web-sys = { version = "0.3", features = ["Window", "Document", "HtmlInputElement"] }
gloo-net = "0.5"
gloo-utils = "0.2"

[lib]
crate-type = ["cdylib"]
